frontend/src/components/VisaStatusOverviewList/VisaStatusOverview.less
.ovreview-header {
    &.card {
        & > .ant-col {
            &:first-child {
                padding-left: 8px;
            }

            &:nth-child(2) {
                text-align: center;
            }

            &:last-child {
                text-align: end;
            }
        }
    }

    &.bar {
        & > .ant-col {
            text-align: center;
            font-size: 15px;
            height: 100%;
        }
    }
}

.ovreview-content-row {
    & > .ant-col {
        text-align: center;
        font-size: 15px;
        height: 100%;
    }
}

.tooltip-box {
    min-width: 100%;
    min-height: 100%;
    width: 100%;
    height: 100%;
}

.overview-dropdown-card {
    min-width: 100%;
    width: 100%;

    .ant-collapse-header {
        padding: 8px !important;

        .ant-col {
            &:nth-child(2) {
                text-align: center;
            }
        }
    }

    .ant-collapse-content-box {
        padding: 8px !important;
    }
}

